--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>DrPizza/h-and-s @ GitHub</title>
+  <title>DrPizza/h-and-j @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -31,18 +31,18 @@
 </head>
 
 <body>
-  <a href="http://github.com/DrPizza/h-and-s"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/DrPizza/h-and-j"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/DrPizza/h-and-s/zipball/master">
+      <a href="http://github.com/DrPizza/h-and-j/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/DrPizza/h-and-s/tarball/master">
+      <a href="http://github.com/DrPizza/h-and-j/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/DrPizza/h-and-s">h-and-s</a>
+    <h1><a href="http://github.com/DrPizza/h-and-j">h-and-j</a>
       <span class="small">by <a href="http://github.com/DrPizza">DrPizza</a></span></h1>
 
     <div class="description">
@@ -50,24 +50,27 @@
     </div>
 
     <h2>Authors</h2>
-<p>Peter Bright (drpizza@quiscalusmexicanus.org)<br/><br/>      </p>
+<p>Peter Bright (drpizza@quiscalusmexicanus.org)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Peter Bright (drpizza@quiscalusmexicanus.org)<br/>      </p>
+<p>Peter Bright (drpizza@quiscalusmexicanus.org)
+<br/>      </p>
 
 
     <h2>Download</h2>
     <p>
       You can download this project in either
-      <a href="http://github.com/DrPizza/h-and-s/zipball/master">zip</a> or
-      <a href="http://github.com/DrPizza/h-and-s/tarball/master">tar</a> formats.
+      <a href="http://github.com/DrPizza/h-and-j/zipball/master">zip</a> or
+      <a href="http://github.com/DrPizza/h-and-j/tarball/master">tar</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/DrPizza/h-and-s</pre>
+      <pre>$ git clone git://github.com/DrPizza/h-and-j</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/DrPizza/h-and-s">DrPizza/h-and-s</a>
+      get the source code on GitHub : <a href="http://github.com/DrPizza/h-and-j">DrPizza/h-and-j</a>
     </div>
 
   </div>
