update flatland to use git-sourced scripts

--- a/example/flatland.html
+++ b/example/flatland.html
@@ -1,3 +1,4 @@
+http://drpizza.github.com/h-and-j/example/flatland.html
 <!DOCTYPE html>
 <html>
 	<head>
@@ -12,18 +13,18 @@
 			google.load("jquery", "1.5", { uncompressed:true });
 		</script>
 		<!-- hyphenator -->
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/hyphenator/Hyphenator.js"></script>
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/hyphenator/patterns/en-gb.js"></script>
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/hyphenator/patterns/en-us.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/hyphenator/Hyphenator.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/hyphenator/patterns/en-gb.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/hyphenator/patterns/en-us.js"></script>
 		<!-- linebreaker -->
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/linebreak/object.js"></script>
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/linebreak/array.js"></script>
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/linebreak/linked-list.js"></script>
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/linebreak/linebreak.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/object.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/array.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/linked-list.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/linebreak.js"></script>
 		<!-- profiling -->
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/time.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/time.js"></script>
 		<!-- h & j -->
-		<script type="text/javascript" src="http://dl.dropbox.com/u/4619191/tumblr/h-and-j.js"></script>
+		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/h-and-j.js"></script>
 	</head>
 	<body>
 		<div id="info">
