use relative paths

--- a/example/flatland.html
+++ b/example/flatland.html
@@ -12,18 +12,18 @@
 			google.load("jquery", "1.5", { uncompressed:true });
 		</script>
 		<!-- hyphenator -->
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/hyphenator/Hyphenator.js"></script>
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/hyphenator/patterns/en-gb.js"></script>
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/hyphenator/patterns/en-us.js"></script>
+		<script type="text/javascript" src="../src/hyphenator/Hyphenator.js"></script>
+		<script type="text/javascript" src="../src/hyphenator/patterns/en-gb.js"></script>
+		<script type="text/javascript" src="../src/hyphenator/patterns/en-us.js"></script>
 		<!-- linebreaker -->
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/object.js"></script>
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/array.js"></script>
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/linked-list.js"></script>
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/linebreak/linebreak.js"></script>
+		<script type="text/javascript" src="../src/linebreak/object.js"></script>
+		<script type="text/javascript" src="../src/linebreak/array.js"></script>
+		<script type="text/javascript" src="../src/linebreak/linked-list.js"></script>
+		<script type="text/javascript" src="../src/linebreak/linebreak.js"></script>
 		<!-- profiling -->
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/time.js"></script>
+		<script type="text/javascript" src="../src/time.js"></script>
 		<!-- h & j -->
-		<script type="text/javascript" src="http://drpizza.github.com/h-and-j/src/h-and-j.js"></script>
+		<script type="text/javascript" src="../src/h-and-j.js"></script>
 	</head>
 	<body>
 		<div id="info">
